@@ -1,19 +1,26 @@
 /*
- * Copyright 2006-2021 The MZmine Development Team
+ * Copyright (c) 2004-2022 The MZmine Development Team
  *
- * This file is part of MZmine.
+ * Permission is hereby granted, free of charge, to any person
+ * obtaining a copy of this software and associated documentation
+ * files (the "Software"), to deal in the Software without
+ * restriction, including without limitation the rights to use,
+ * copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following
+ * conditions:
  *
- * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
- * General Public License as published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
  *
- * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+ * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+ * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
  */
 
 package io.github.mzmine.modules.visualization.image;
@@ -24,132 +31,116 @@ import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.datamodel.features.ModularFeature;
 import io.github.mzmine.gui.chartbasics.gui.javafx.EChartViewer;
-import io.github.mzmine.gui.chartbasics.simplechart.SimpleXYZScatterPlot;
-import io.github.mzmine.gui.chartbasics.simplechart.datasets.ColoredXYZDataset;
-import io.github.mzmine.gui.chartbasics.simplechart.datasets.RunOption;
-import io.github.mzmine.gui.chartbasics.simplechart.providers.impl.FeatureImageProvider;
 import io.github.mzmine.gui.mainwindow.MZmineTab;
 import io.github.mzmine.gui.preferences.MZminePreferences;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.modules.io.import_rawdata_imzml.ImagingParameters;
-import io.github.mzmine.modules.visualization.featurelisttable_modular.FeatureTableFXModule;
-import io.github.mzmine.modules.visualization.featurelisttable_modular.FeatureTableFXParameters;
+import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraPlot;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraVisualizerTab;
 import io.github.mzmine.parameters.ParameterSet;
-import java.awt.Color;
-import java.awt.Image;
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.logging.Level;
 import javafx.fxml.FXMLLoader;
-import javafx.scene.Node;
 import javafx.scene.control.Label;
 import javafx.scene.input.MouseButton;
-import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.GridPane;
 import org.jetbrains.annotations.NotNull;
-import org.jfree.chart.axis.AxisLocation;
-import org.jfree.chart.axis.NumberAxis;
 import org.jfree.chart.fx.interaction.ChartMouseEventFX;
 import org.jfree.chart.fx.interaction.ChartMouseListenerFX;
 import org.jfree.chart.plot.XYPlot;
 
-/*
- * @author Ansgar Korf (ansgar.korf@uni-muenster.de)
+/**
+ * Combines the ImagingPlot with a spectrum
+ *
+ * @author Ansgar Korf (ansgar.korf@uni-muenster.de), Robin Schmid <a
+ * href="https://github.com/robinschmid">https://github.com/robinschmid</a>
  */
 public class ImageVisualizerTab extends MZmineTab {
 
+  private final ParameterSet parameters;
   private final ImageVisualizerPaneController controller;
+  private final ImagingPlot imagingPlot;
   private final EChartViewer imageHeatMapPlot;
-  private final ImagingRawDataFile rawDataFile;
+  private SpectraVisualizerTab spectraTab;
+  private ImagingRawDataFile rawDataFile;
 
-  public ImageVisualizerTab(ModularFeature feature){
-    super("Image viewer", true, false);
-    FeatureImageProvider prov = new FeatureImageProvider(feature);
-    ColoredXYZDataset ds = new ColoredXYZDataset(prov, RunOption.THIS_THREAD);
-
-    SimpleXYZScatterPlot<FeatureImageProvider> chart = new SimpleXYZScatterPlot<>();
-    chart.setRangeAxisLabel("µm");
-    chart.setDomainAxisLabel("µm");
-    ImagingRawDataFile imagingFile = (ImagingRawDataFile) feature.getRawDataFile();
-    ImagingParameters imagingParameters = imagingFile.getImagingParam();
-    final boolean hideAxes = MZmineCore.getConfiguration()
-        .getModuleParameters(FeatureTableFXModule.class).getParameter(
-            FeatureTableFXParameters.hideImageAxes).getValue();
-
-    NumberAxis axis = (NumberAxis) chart.getXYPlot().getRangeAxis();
-    chart.setDataset(ds);
-    axis.setInverted(true);
-    axis.setAutoRangeStickyZero(false);
-    axis.setAutoRangeIncludesZero(false);
-    axis.setRange(new org.jfree.data.Range(0, imagingParameters.getLateralHeight()));
-    axis.setVisible(!hideAxes);
-
-    axis = (NumberAxis) chart.getXYPlot().getDomainAxis();
-    axis.setAutoRangeStickyZero(false);
-    axis.setAutoRangeIncludesZero(false);
-    chart.getXYPlot().setDomainAxisLocation(AxisLocation.TOP_OR_RIGHT);
-    axis.setRange(new org.jfree.data.Range(0, imagingParameters.getLateralWidth()));
-    axis.setVisible(!hideAxes);
-
-    final boolean lockOnAspectRatio = MZmineCore.getConfiguration()
-        .getModuleParameters(FeatureTableFXModule.class).getParameter(
-            FeatureTableFXParameters.lockImagesToAspectRatio).getValue();
-    chart.getXYPlot().setBackgroundPaint(Color.BLACK);
-    this.imageHeatMapPlot = chart;
-    this.rawDataFile = imagingFile;
-    AnchorPane root = null;
+  public ImageVisualizerTab(ParameterSet parameters) {
+    super("Image viewer", false, false);
+    this.parameters = parameters;
+    BorderPane mainPane = null;
     FXMLLoader loader = new FXMLLoader((getClass().getResource("ImageVisualizerPane.fxml")));
     try {
-      root = loader.load();
+      mainPane = loader.load();
       logger.finest(
           "Root element of Image visualizer tab has been successfully loaded from the FXML loader.");
     } catch (IOException e) {
-      e.printStackTrace();
+      logger.log(Level.WARNING, e.getMessage(), e);
     }
 
     // Get controller
     controller = loader.getController();
-    updateHeatMapPlot();
-    addRawDataInfo(rawDataFile);
-    addImagingInfo(imagingParameters);
-    setContent(root);
-  }
-  public ImageVisualizerTab(EChartViewer imageHeatMapPlot,
-      ImagingRawDataFile rawDataFile, ImagingParameters imagingParameters) {
-    super("Image viewer", true, false);
 
-    this.imageHeatMapPlot = imageHeatMapPlot;
+    // add empty image chart
+    imagingPlot = new ImagingPlot(parameters);
+    controller.getPlotPane().setCenter(imagingPlot);
+    imageHeatMapPlot = imagingPlot.getChart();
+    MZmineCore.getConfiguration().getDefaultChartTheme().apply(imageHeatMapPlot);
+    addListenerToImage();
+
+    setContent(mainPane);
+  }
+
+  public ImageVisualizerTab(ModularFeature feature, ParameterSet parameters) {
+    this(parameters);
+
+    setData(feature);
+  }
+
+  public ImageVisualizerTab(ImagingRawDataFile rawDataFile, ParameterSet parameters) {
+    this(parameters);
+
+    setData(rawDataFile, true);
+  }
+
+  public synchronized void setData(ImagingRawDataFile rawDataFile, boolean createImage) {
+    if (spectraTab == null) {
+      // spectrum plot
+      spectraTab = new SpectraVisualizerTab(rawDataFile);
+      getSpectrumPlot().setShowCursor(true);
+      BorderPane pane = controller.getSpectrumPlotPane();
+      pane.setCenter(spectraTab.getMainPane());
+      // add listener to spectrum property
+      getSpectrumPlot().selectedMzRangeProperty()
+          .addListener((o, ov, nv) -> imagingPlot.setData(rawDataFile, nv));
+    }
+
     this.rawDataFile = rawDataFile;
-    AnchorPane root = null;
-    FXMLLoader loader = new FXMLLoader((getClass().getResource("ImageVisualizerPane.fxml")));
-    try {
-      root = loader.load();
-      logger.finest(
-          "Root element of Image visualizer tab has been successfully loaded from the FXML loader.");
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
+    ImagingParameters imagingParameters = rawDataFile.getImagingParam();
 
-    // Get controller
-    controller = loader.getController();
-    updateHeatMapPlot();
     addRawDataInfo(rawDataFile);
     addImagingInfo(imagingParameters);
-    setContent(root);
+    if (createImage) {
+      imagingPlot.setData(rawDataFile);
+    }
   }
 
-
-  public void updateHeatMapPlot() {
-    BorderPane plotPane = controller.getPlotPane();
-    plotPane.setCenter(imageHeatMapPlot);
-    addListenerToImage(imageHeatMapPlot, rawDataFile);
+  public void setData(ModularFeature feature) {
+    setData((ImagingRawDataFile) feature.getRawDataFile(), false);
+    imagingPlot.setData(feature);
   }
 
-  private void addListenerToImage(EChartViewer imageHeatMapPlot, ImagingRawDataFile rawDataFile) {
+  /**
+   * @return Main component of the image visualizer in the center
+   */
+  public ImagingPlot getImagingPlot() {
+    return imagingPlot;
+  }
+
+  private void addListenerToImage() {
     imageHeatMapPlot.addChartMouseListener(new ChartMouseListenerFX() {
-
       @Override
       public void chartMouseMoved(ChartMouseEventFX event) {
       }
@@ -161,51 +152,46 @@ public class ImageVisualizerTab extends MZmineTab {
         double yValue = plot.getRangeCrosshairValue();
         if ((event.getTrigger().getButton().equals(MouseButton.PRIMARY))) {
           Scan selectedScan = rawDataFile.getScan(xValue, yValue);
-          AnchorPane pane = controller.getSpectrumPlotPane();
-          Node spectrum = addSpectra(rawDataFile, selectedScan);
-          AnchorPane.setTopAnchor(spectrum, 0.0);
-          AnchorPane.setRightAnchor(spectrum, 0.0);
-          AnchorPane.setLeftAnchor(spectrum, 0.0);
-          AnchorPane.setBottomAnchor(spectrum, 0.0);
-          pane.getChildren().add(spectrum);
+          showSpectrum(selectedScan);
         }
       }
     });
   }
 
-  private Node addSpectra(ImagingRawDataFile rawDataFile, Scan selectedScan) {
-    SpectraVisualizerTab spectraTab = new SpectraVisualizerTab(rawDataFile);
+  private SpectraPlot getSpectrumPlot() {
+    return spectraTab.getSpectrumPlot();
+  }
+
+  private void showSpectrum(Scan selectedScan) {
     spectraTab.loadRawData(selectedScan);
-    return spectraTab.getContent();
   }
 
   private void addRawDataInfo(ImagingRawDataFile rawDataFile) {
     ImagingRawDataInfo rawDataInfo = new ImagingRawDataInfo(rawDataFile);
     GridPane rawDataInfoPane = controller.getRawDataInfoGridPane();
     rawDataInfoPane.add(new Label("File name:"), 0, 0);
-    rawDataInfoPane.add(new Label(rawDataInfo.getName()), 1, 0);
+    rawDataInfoPane.add(new Label(rawDataInfo.name()), 1, 0);
     rawDataInfoPane.add(new Label("Number of scans:"), 0, 1);
-    rawDataInfoPane.add(new Label(rawDataInfo.getNumberOfScans().toString()), 1, 1);
+    rawDataInfoPane.add(new Label(rawDataInfo.numberOfScans().toString()), 1, 1);
     rawDataInfoPane.add(new Label("Range m/z:"), 0, 2);
     rawDataInfoPane.add(new Label(
-            MZminePreferences.mzFormat.getValue().format(rawDataInfo.getDataMzRange().lowerEndpoint())
-                + "-" + MZminePreferences.mzFormat.getValue()
-                .format(rawDataInfo.getDataMzRange().upperEndpoint())),
-        1, 2);
+        MZminePreferences.mzFormat.getValue().format(rawDataInfo.dataMzRange().lowerEndpoint())
+            + "-" + MZminePreferences.mzFormat.getValue()
+            .format(rawDataInfo.dataMzRange().upperEndpoint())), 1, 2);
   }
 
   private void addImagingInfo(ImagingParameters imagingParameters) {
     GridPane imagingParametersInfoPane = controller.getImagingParameterInfoGridPane();
-    imagingParametersInfoPane.add(new Label("Image dimension [\u00B5m]:"), 0, 0);
+    imagingParametersInfoPane.add(new Label("Image dimension [μm]:"), 0, 0);
     imagingParametersInfoPane.add(new Label("X " + imagingParameters.getLateralWidth() + "  x  Y "
         + imagingParameters.getLateralHeight()), 1, 0);
     imagingParametersInfoPane.add(new Label("Total number of pixels:"), 0, 1);
-    Integer totalNumberOfPixel =
+    int totalNumberOfPixel =
         imagingParameters.getMaxNumberOfPixelX() * imagingParameters.getMaxNumberOfPixelY();
-    imagingParametersInfoPane.add(new Label(totalNumberOfPixel.toString()), 1, 1);
+    imagingParametersInfoPane.add(new Label(Integer.toString(totalNumberOfPixel)), 1, 1);
     imagingParametersInfoPane.add(new Label("Spectra per pixel:"), 0, 2);
-    Integer spectraPerPixel = imagingParameters.getSpectraPerPixel();
-    imagingParametersInfoPane.add(new Label(spectraPerPixel.toString()), 1, 2);
+    int spectraPerPixel = imagingParameters.getSpectraPerPixel();
+    imagingParametersInfoPane.add(new Label(Integer.toString(spectraPerPixel)), 1, 2);
     imagingParametersInfoPane.add(new Label("Imaging patter:"), 0, 3);
     imagingParametersInfoPane.add(new Label(imagingParameters.getPattern().toString()), 1, 3);
     imagingParametersInfoPane.add(new Label("Scan direction:"), 0, 4);
@@ -219,35 +205,30 @@ public class ImageVisualizerTab extends MZmineTab {
   @NotNull
   @Override
   public Collection<? extends FeatureList> getAlignedFeatureLists() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
   public void onRawDataFileSelectionChanged(Collection<? extends RawDataFile> rawDataFiles) {
-
   }
 
   @Override
   public void onFeatureListSelectionChanged(Collection<? extends FeatureList> featureLists) {
-
   }
 
   @Override
   public void onAlignedFeatureListSelectionChanged(Collection<? extends FeatureList> featureLists) {
-
   }
 
   @NotNull
   @Override
   public Collection<? extends RawDataFile> getRawDataFiles() {
-    // TODO Auto-generated method stub
-    return null;
+    return List.of(rawDataFile);
   }
 
   @NotNull
   @Override
   public Collection<? extends FeatureList> getFeatureLists() {
-    // TODO Auto-generated method stub
-    return null;
+    return List.of();
   }
 }
